# src/routes/categories.routes.ts
@@ -1,26 +1,29 @@
 import { Router } from "express";
 
 import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
-import { listCategoriesController } from "../modules/cars/useCases/listCategories";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import  multer  from "multer";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+
+import multer from "multer";
 
 const categoriesRoute = Router();
 
 const upload = multer({
   dest: "./tmp",
-})
+});
 
 const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
 categoriesRoute.post("/", createCategoryController.handle);
 
-categoriesRoute.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+categoriesRoute.get("/", listCategoriesController.handle);
 
-categoriesRoute.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-})
+categoriesRoute.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRoute };
